[package]
name = "axum_aide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
tokio = { version = "1.21", default-features = false, features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.2", default-features = false, features = ["json", "query", "tokio", "http1"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
aide = { version = "0.13.0", features = ["axum", "axum-extra", "macros", "redoc"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
schemars = { version = "0.8.16", features = ["uuid1"] }
